<resources>
    <string name="app_name">ParkingFinder</string>
    <!-- login & register fragment -->
    <string name="et_email">E-mail address</string>
    <string name="et_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <!-- parking list toolbar-->
    <string name="search">Search</string>
    <string name="locate">Locate</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="default_city_name">City name</string>
    <string name="about">About</string>

    <!--  View parking-lot -->
    <string name="report_not_existing">Report as not existing</string>
    <string name="edit_parking_lot">Edit parking lot</string>
    <string name="private_lot">This parking lot is private</string>
    <string name="public_lot">This parking lot is public</string>
    <string name="navigate">Open in Google Maps --></string>

    <!--  Add parking-lot -->
    <string name="add_parking_lot">Add</string>
    <string name="hint_description">Description</string>
    <string name="locate_me">Locate me</string>

    <!--  Location or network permissions -->
    <string name="exit_app">Exit</string>
    <string name="btn_continue">Continue</string>
    <string name="settings_message">Make sure you are connected to the internet and your location services are enabled!</string>
</resources>