<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/app_title"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:src="@drawable/z_logo_parking_finder"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_email"
        android:inputType="text"
        android:textSize="@dimen/et_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:textSize="@dimen/et_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintWidth_percent="0.8" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@drawable/shape_button_background"
            android:text="@string/btn_login"
            android:textColor="@color/selector_black_alpha"
            android:textSize="@dimen/btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_background"
            android:text="@string/btn_register"
            android:textColor="@color/selector_black_alpha"
            android:textSize="@dimen/btn_text"
            app:layout_constraintStart_toEndOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/et_password" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>